# ai-assistant

./: .gitignore  README.md  chat_ui.py  main.py  pyproject.toml
data/raw/: faq.json  internal_procedure.docx  reviews.csv  support_ticket_142.md
db/: connection.py
scripts/: ingest.py  ingest_and_embed.py  rag.py  retrieve.py
src/api/: main.py
